// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ModalPickerValueTruncator ui overflowing 1`] = `
<div>
  <span
    class="text-truncate position-relative"
  >
    <div
      class="w-100 h-100 position-absolute"
      style="outline: 0;"
      tabindex="0"
    >
       
    </div>
    admin@42.nl, user@42.nl
  </span>
</div>
`;

exports[`Component: ModalPickerValueTruncator ui single value 1`] = `
<div>
  <span
    class="text-truncate position-relative"
  >
    user@42.nl
  </span>
</div>
`;
